--- a/ram_workshop/ram-paper.tex
+++ b/ram_workshop/ram-paper.tex
@@ -93,20 +93,29 @@ At the end.
 
 \section{Introduction}
 
-Statistical natural image modelling remains a fundamental problem in computer vision and image understanding. This has motivated recent approaches in generative modelling applied to natural images by employing deep neural networks for their inference and generative components. Image generative models studied previously, e.g. variants of Boltzmann Machines \citep{smolensky_rbm}, \citep{russ_dbm} and Deep Belief Networks \citep{hinton_dbn}, are often restricted to learning unconditional models of images distribution or conditioned on simple structured annotations, for example classification labels. Despite the advances in the variational generative models \cite{kingma_vae}\cite{gregor_draw} and the Generative Adversarial Networks (GANs) \citep{goodfellow_gan}\cite{denton_lapgan}, learning the highly structured natural image distribution alone in the high dimensional pixel space alone proves to be a difficult task. In real world, however, images rarely appear in isolation. They often accompanied by their unstructured textual descriptions on web pages and in books. One domain presents substantial amount of relating information of the other domain. The additional information from image and unstructured text description could be used to simplify the image modelling task. In addition, learning conditional generative model from text allows better understanding of the generalization performance of the model to new scenes. 
+Statistical natural image modelling remains a fundamental problem in computer vision and image understanding. 
+%This has motivated recent approaches in generative modelling applied to natural images by employing deep neural networks for their inference and generative components. 
+Generative models of images studied previously, e.g. variants of Boltzmann Machines \citep{smolensky_rbm}, \citep{russ_dbm} and Deep Belief Networks \citep{hinton_dbn},  
+often defined distributions that were restricted to being either unconditioned or conditioned on simple structured annotations, for example classification labels.
+%are often restricted to learning unconditional models of images distribution or conditioned on simple structured annotations, for example classification labels. 
+Despite the recent advances in new methods of generative models, such as Variational Auto-Encoders (VAE) \cite{kingma_vae}\cite{gregor_draw} and Generative Adversarial Networks (GANs) \citep{goodfellow_gan}\cite{denton_lapgan}, learning the highly structured natural image distribution in high-dimensional pixel space proves to be a difficult task. In real world circumstances, however, images rarely appear in isolation as they are often accompanied by unstructured textual descriptions, such as on web pages and in books. 
+%One domain presents substantial amount of relating information of the other domain. 
+The additional information from these descriptions could be used to simplify the image modelling task. %%
+Moreover, learning generative models conditioned on text allows a better understanding of the generalization performance of the model, as we can create textual descriptions of completely new scenes not seen at training time. 
 
 
-\comm{There are two directions in learning a generative model of image and text.  One approach is to learn a text generative model conditioned on the images.} 
+\comm{There are two directions in learning a generative model of images conditioned text.  One approach is to learn a text generative model conditioned on the images.} 
 
-Significant amount of recent works has been focused on generating captions from images \citep{karpathy_captions}, \citep{xu_captions}, \citep{kiros_captions} and etc. By contrast, learning a generative model for image and text may also be studied by generating images correctly interpreting the text description. 
-Generating high dimensional realistic images from their descriptions is a more difficult approach that combines two challenging components of language modelling and image generation. 
+A significant amount of recent work has been focused on generating captions from images \citep{karpathy_captions}, \citep{xu_captions}, \citep{kiros_captions}. A question that can be posed is whether the opposite is possible, i.e. generating an image given a caption.  
+%By contrast, learning a generative model for images and text may also be studied by generating images correctly interpreting the text description. 
+Generating high dimensional realistic images from their descriptions is a more difficult problem as it requires both language modelling and image generation. 
 
 
 \comm{The models take an image descriptor and generate unstructured texts through a recurrent decoder.} 
 
 \comm{Namely, the model has to capture the semantic meaning expressed in the description and then use that knowledge to generate pixel intensities of the image. Although, the interesting high dimensional natural images lay on a small manifold that is difficult to capture, the additional text description cues of a target image may simplify the learning problem by focusing on the conditional distribution. }
 
-In this paper, we address the problem of image generation from unstructured natural language captions. By extending the Deep Recurrent Attention Writer (DRAW)\cite{gregor_draw}, our model iteratively draws the patches on canvas, while attending to the relevant words in the description. Overall, the main contributions of this work are the following: we introduce a conditional alignDRAW model, a generative model of images using soft attention mechanism attending to different input words while generating images. The images generated by our alignDRAW model are refined by post-processing deterministic Laplacian pyramid adversarial network \cite{denton_lapgan}. We then illustrate how our method, learnt on Microsoft COCO dataset, generalizes to the captions describing novel scenarios that is unseen from the training set.
+In this paper, we address the problem of image generation from unstructured natural language captions. By extending the Deep Recurrent Attention Writer (DRAW)\cite{gregor_draw}, our model iteratively draws patches on a canvas, while attending to relevant words in the description. Overall, the main contributions of this work are the following: we introduce a conditional alignDRAW model, a generative model of images using a soft attention mechanism attending to different input words while generating images. The images generated by our alignDRAW model are refined in a post-processing step by a deterministic Laplacian pyramid adversarial network \cite{denton_lapgan}. We then illustrate how our method, learnt on the Microsoft COCO dataset, generalizes to captions describing novel scenarios that are not seen in the training set.
  
 \comm{
 \section{Related Work}
