--- a/ram_workshop/ram-paper.tex
+++ b/ram_workshop/ram-paper.tex
@@ -98,7 +98,7 @@ Statistical natural image modelling remains a fundamental problem in computer vi
 Generative models of images studied previously, e.g. variants of Boltzmann Machines \citep{smolensky_rbm}, \citep{russ_dbm} and Deep Belief Networks \citep{hinton_dbn},  
 often defined distributions that were restricted to being either unconditioned or conditioned on simple structured annotations, for example classification labels.
 %are often restricted to learning unconditional models of images distribution or conditioned on simple structured annotations, for example classification labels. 
-Despite the recent advances in new methods of generative models, such as Variational Auto-Encoders (VAE) \cite{kingma_vae}\cite{gregor_draw} and Generative Adversarial Networks (GANs) \citep{goodfellow_gan}\cite{denton_lapgan}, learning the highly structured natural image distribution in high-dimensional pixel space proves to be a difficult task. In real world circumstances, however, images rarely appear in isolation as they are often accompanied by unstructured textual descriptions, such as on web pages and in books. 
+Despite the recent advances in new methods of generative models, such as Variational Auto-Encoders (VAE) \cite{kingma_vae}\cite{gregor_draw} and Generative Adversarial Networks (GANs) \citep{goodfellow_gan}\cite{denton_lapgan}, learning the highly structured natural image distribution in high-dimensional pixel space proves to be a difficult task. In real world applications, however, images rarely appear in isolation as they are often accompanied by unstructured textual descriptions, such as on web pages and in books. 
 %One domain presents substantial amount of relating information of the other domain. 
 The additional information from these descriptions could be used to simplify the image modelling task. %%
 Moreover, learning generative models conditioned on text allows a better understanding of the generalization performance of the model, as we can create textual descriptions of completely new scenes not seen at training time. 
@@ -141,17 +141,19 @@ While all of the previous work has been focused on unconditional models or model
 \vspace{-0.1in}
 \section{Model}
 \vspace{-0.1in}
-Our proposed model can be viewed as a part of sequence-to-sequence framework \citep{ilya_mt}, \citep{cho_mt}, \citep{nitish_video} where captions are represented as a sequence of consecutive words and images are represented as a sequence of patches drawn on canvas over time $t=1,...,T$. Let $\icaption$ be the input caption, consisting of $N$ words $y_{1}, y_{2}, ..., y_{n}$ and $\oimage$ be the image corresponding to that caption.
+Our proposed model can be viewed as utilizing the sequence-to-sequence framework \citep{ilya_mt}, \citep{cho_mt}, \citep{nitish_video}, where captions are represented as a sequence of consecutive words and images are represented as a sequence of patches drawn on canvas over time $t=1,...,T$. Let $\icaption$ be the input caption, consisting of $N$ words $y_{1}, y_{2}, ..., y_{n}$ and $\oimage$ be the image corresponding to that caption.
 
 \subsection{Language Representation: the Bidirectional Attention RNN}
 \label{sec:lang}
-The input caption sentences are fed into a deterministic Bidirectional LSTM\cite{} that encodes the variable size sentences into the vector representation $s$. Bidirectional LSTM consists of one Forward LSTM and Backward LSTM which combine information from past and future respectively. The Forward LSTM computes the sequence of forward hidden states $[\overrightarrow{h}^{lang}_{1}, \overrightarrow{h}^{lang}_{2}, ..., \overrightarrow{h}^{lang}_{N}]$ , whereas the Backward LSTM computes the sequence of backward hidden states $[\overleftarrow{h}^{lang}_{1}, \overleftarrow{h}^{lang}_{2}, ..., \overleftarrow{h}^{lang}_{N}]$. Then these hidden states are concatenated together into the sequence $[\hlang_{1}, \hlang_{2}, ..., \hlang_{N}]$, where $\hlang_{n} = [\overrightarrow{h}^{lang}_{n}, \overleftarrow{h}^{lang}_{n}], 1\leq n\leq N$.
+The input caption sentences are fed into a deterministic Bidirectional LSTM\cite{} that encodes the variable size sentences into the vector representation $s$. A Bidirectional LSTM consists of one Forward LSTM and one Backward LSTM which combine information from past and future, respectively. The Forward LSTM computes the sequence of forward hidden states $[\overrightarrow{h}^{lang}_{1}, \overrightarrow{h}^{lang}_{2}, ..., \overrightarrow{h}^{lang}_{N}]$ , whereas the Backward LSTM computes the sequence of backward hidden states $[\overleftarrow{h}^{lang}_{1}, \overleftarrow{h}^{lang}_{2}, ..., \overleftarrow{h}^{lang}_{N}]$. Then these hidden states are concatenated together into the sequence $[\hlang_{1}, \hlang_{2}, ..., \hlang_{N}]$, where $\hlang_{n} = [\overrightarrow{h}^{lang}_{n}, \overleftarrow{h}^{lang}_{n}], 1\leq n\leq N$.
 
 \subsection{Image Generation: the Conditional DRAW Network}
 \comm{
 The DRAW network \cite{gregor_draw} is a sequential probabilistic model generating images by accumulating the output at each iterative step. While the original DRAW network assumes the latent variables are independent, it has shown in \citep{bachman_sdm} the model performance is improved by including the dependencies of latent variables. 
 }
-We extended the architecture the DRAW network \citep{gregor_draw} generative process to include additional input caption from the language model described in Sec. (\ref{sec:lang}). Similarly to the original DRAW network, the conditional DRAW network is a stochastic recurrent neural network that consists of Inference LSTM that infers the distribution of latent variables of image $x$ given $y$ and then the Generative LSTM that uses the inferred latent variables in order to reconstruct the image $x$ given $y$. The $align$ function is used to compute the alignment between the input caption and intermediate image generative steps as in \cite{bahdanau_mt}:
+We extended the architecture of the generative DRAW network \citep{gregor_draw} 
+%generative process an input caption from the
+to include a language model, described in Sec. (\ref{sec:lang}), which process the conditioned caption. Similarly to the original DRAW network, the conditional DRAW network is a stochastic recurrent neural network that consists of an Inference LSTM that infers the distribution of latent variables of image $x$ given $y$ and a Generative LSTM that uses the inferred latent variables in order to reconstruct the image $x$ given $y$. The $align$ function is used to compute the alignment between the input caption and intermediate image generative steps, which can be seen as an adaptation of the translation model of \cite{bahdanau_mt}:
 
 Formally, the image is generated by iteratively computing the following equations for $t=1,...,T$
 \begin{align}
@@ -168,7 +170,7 @@ Given the caption representation from the language model, $\hlangall = [\hlang_{
 \begin{align}
 s_t=align(\hdec_{t-1}, \hlangall) = \alpha_{1}\hlang_{1} + \alpha_{2}\hlang_{2} + ... + \alpha_{N}\hlang_{N}.
 \end{align}
-The corresponding alignment probabilities $\alpha_{1...N}$ at each step are obtained using caption representation $\hlang$ and hidden state of the generative model $\hdec_{t}$ as in \citep{bahdanau_mt}
+The corresponding alignment probabilities $\alpha_{1...N}$ at each step are obtained using the caption representation $\hlang$ and the hidden state of the generative model $\hdec_{t}$, as in \citep{bahdanau_mt}
 \comm{
 \begin{align}
 e_{tj} &= v^{T}tanh(U\hlang_{j} + W\hdec_{t} + b)\\
@@ -181,7 +183,7 @@ Setting $\alpha_{1...N}$ to $\frac{1}{N}$ turns the encoder into the vanilla mod
 }
 \subsection{Learning}
 
-The conditional generative model is trained to maximize the variational lower bound on the log-likelihood $\icaption$, $\log \sum_{\Lat_{1:T}} \prior(\Lat_{1:T})p(\oimage\given\icaption, \Lat_{1:T})$ similar to \cite{kingma_vae}. The posterior inference is approximated by an inference network $\post(\Lat_{1:T}\given\icaption,\oimage)$ shown in red dash box in Figure (\ref{fig:figmodel}). Unlike the original DRAW network where latent variables are independent unit Gaussian $\mathcal{N}(0, I)$, the align DRAW model uses latent variables whose mean and variance depends on the previous recurrent hidden states $\hdec_{t-1}$ as in \cite{}. In particular, the prior distribution $\prior(\Lat_t\given\Lat_{1:t-1})$ takes the form $\mathcal{N}(\mu_{t}(\hdec_{t-1}), \sigma_{t}(\hdec_{t-1}))$.  
+The conditional generative model is trained to maximize the variational lower bound on the log-likelihood $\icaption$, $\log \sum_{\Lat_{1:T}} \prior(\Lat_{1:T})p(\oimage\given\icaption, \Lat_{1:T})$ similarly to \cite{kingma_vae}. The posterior inference is approximated by an inference network $\post(\Lat_{1:T}\given\icaption,\oimage)$ shown in the red dashed box in Figure (\ref{fig:figmodel}). Unlike the original DRAW network where latent variables are independent unit Gaussians $\mathcal{N}(0, I)$, the align DRAW model uses latent variables whose mean and variance depends on the previous recurrent hidden states $\hdec_{t-1}$ as in \cite{}. In particular, the prior distribution $\prior(\Lat_t\given\Lat_{1:t-1})$ takes the form $\mathcal{N}(\mu_{t}(\hdec_{t-1}), \sigma_{t}(\hdec_{t-1}))$.  
 
 \comm{
 is learned by the modified version of Stochastic Gradient Variation Bayes (SGVB) algorithm introduced by \cite{kingma_vae}. The model is trained to maximize the lower bound of marginal likelihood $\loss$ of the correct image $x$ given the input caption $y$. The $\loss$ is decomposed into the latent loss $\lloss$ and the reconstruction loss $\rloss$. 
@@ -214,7 +216,8 @@ The expectation can be approximate by $\numSamples$ Monte Carlo samples $\LatSam
 }
 \subsection{Generating Images from Captions}
 
-During the image generation step, we throw away the inference network from the decoder and instead sample from the prior distribution. Due to the blurriness of samples generated by DRAW model, we do an additional post processing step, where we use the generator of the adversarial network trained on residuals of laplacian pyramid to sharpen the generated images, similar to \citep{denton_lapgan}. By fixing the prior of adversarial generator to the mean of uniform distribution, it gets treated as a deterministic neural network which allows us to calculate the lower bound of likelihood. The reconstuction loss becomes the loss between sharpened image and correct image, whereas the latent loss stays the same. We also noticed that sampling from the mean of uniform distribution allowed us to generate much less noisy samples than by sampling from the uniform distribution itself.  
+During the image generation step, we detach the inference network from the decoder and discard it, and instead sample from the prior distribution. Due to the blurriness of samples generated by the DRAW model, we do an additional post processing step, where we use the generator of an adversarial network trained on the residuals of a laplacian pyramid to sharpen the generated images, 
+similar to \citep{denton_lapgan}. By fixing the prior of the adversarial generator to be the mean of the original uniform distribution, it gets treated as a deterministic neural network which allows us to calculate the lower bound of the likelihood. The reconstuction loss becomes the loss between sharpened image and correct image, whereas the latent loss stays the same. We also noticed that inputting the mean of the uniform distribution into the edge generator network allowed us to generate samples with much less noise than if we had sampled from the uniform distribution.  
 
 \section{Experiments}
 % \subsection{MNIST With Captions}
@@ -419,12 +422,12 @@ Apart from changing the colors of objects, we were curious whether changing the 
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-sharp.png}}\quad
 %
 \end{center}
-\caption{Examples of changing the background while keeping the caption fixed. The respective nearest training images based on pixel-wise L2 distance are displayed on top.}
+\caption{Bottom: Examples of changing the background while keeping the caption fixed. Top: The respective nearest training images based on pixel-wise L2 distance.}
 \label{fig:genimages2}
 \vspace{-0.3cm}
 \end{figure}
 
-Despite an infinite number of ways of changing colors and backgrounds in descriptions, in general we found that the model made appropriate changes as long as some similar pattern was present in the training set. However, the model struggled when the visual difference between objects was very small, such as the objects having the same general shape and colors. In Figure~\ref{fig:genimages3}, we demonstrate that when we swap two objects that are both visually similar, for example cats and dogs, it is difficult to discriminate solely from the generated samples whether it is an image of a cat or dog, even though we might notice an animal-like shape. This highlights a limitation of the model in that it has difficulty modelling the fine-grained details of objects. 
+Despite an infinite number of ways of changing colors and backgrounds in descriptions, in general we found that the model made appropriate changes as long as some similar pattern was present in the training set. However, the model struggled when the visual difference between objects was very small, such as when the objects have the same general shape and color. In Figure~\ref{fig:genimages3}, we demonstrate that when we swap two objects that are both visually similar, for example cats and dogs, it is difficult to discriminate solely from the generated samples whether it is an image of a cat or dog, even though we might notice an animal-like shape. This highlights a limitation of the model in that it has difficulty modelling the fine-grained details of objects. 
  
 \begin{figure}[!h]
 \captionsetup[subfigure]{labelformat=empty}
@@ -449,7 +452,7 @@ Despite an infinite number of ways of changing colors and backgrounds in descrip
 
 \subsubsection{Analysis of Attention}
 
-After flipping set of words in the captions, we were curious to see which words did the model attend to when generating images. It turned out that during the generation step, the model mostly focused on the specific words that carried out the main semantic meaning expressed in the sentences. The attention values in sentences helped us interpret the reasons why the model did or didn't make relevant changes in images when flipping words. For example, as shown in Figure~\ref{fig:attentimages1} despite flipping word ``desert'' to ``forest'', the model equally looked at these words and thus made the correct changes. Whereas, flipping between words ``beach'' and ``sun'' has resulted in no change, due to the model ignoring the word ``sun''.
+After flipping sets of words in the captions, we were curious to see which words the model attended to when generating images. It turned out that during the generation step, the model mostly focused on the specific words (or their neighbors) that carried the main semantic meaning expressed in the sentences. The attention values in sentences helped us interpret the reasons why the model made the changes it did when we flipped certain words. For example, in Figure~\ref{fig:attentimages1} we can see that when we flipped the word ``desert'' to ``forest'', the attention over words in the sentence did not change drastically. This suggests that, in their respective sentences, the model looked at ``desert'' and ``forest'' with relatively equal probability, and thus made the correct changes. In contrast, when we swap words ``beach'' and ``sun'', we can see a drastic change between sentences in the probability distribution over words. By noting that the model completely ignores the word ``sun'' in the second sentence, we can therefore gain a more thorough understanding of why we see no visual differences between the images generated by each caption.
 
 We also tried to analyze the way the model generated images. Unfortunately, we found that there was no connection between the patches drawn on canvas and the most attended words at particular timesteps.
 
@@ -475,7 +478,7 @@ We also tried to analyze the way the model generated images. Unfortunately, we f
 \end{figure} 
 
 \subsubsection{Comparison With Other Models}
-Quantitatively evaluating generative models remains a challenging task in of itself as each method of evaluation suffer from its own specific drawbacks. Compared to reporting classification accuracies in discriminative models, the measures defining generative models are intractable most of the times and might not correctly define the real quality of the model. To get a better comparision between performances of different generative models, we report results on two different metrics as well as do some qualitative comparison of different generative models.
+Quantitatively evaluating generative models remains a challenging task in of itself as each method of evaluation suffer from its own specific drawbacks. Compared to reporting classification accuracies in discriminative models, the measures defining generative models are intractable most of the times and might not correctly define the real quality of the model. To get a better comparison between performances of different generative models, we report results on two different metrics as well as a qualitative comparison of different generative models.
 
 \begin{figure}[!t]
 \captionsetup[subfigure]{labelformat=empty}
@@ -494,11 +497,13 @@ Quantitatively evaluating generative models remains a challenging task in of its
 \vspace{-0.2cm}
 \end{figure}
 
-In Figure~\ref{fig:diffmodels}, we generated several samples from the prior of each of the current state-of-the-art generative models, conditioned on the caption ``A group of people walk on a beach with surf boards". While all of the samples look sharp, the images generated by LAPGAN look more noisy and it is harder to make out definite objects don't have a clear structure in them, whereas the images generated by variational models trained with L2 cost function have a watercolor effect on the images.
+In Figure~\ref{fig:diffmodels}, we generated several samples from the prior of each of the current state-of-the-art generative models, conditioned on the caption ``A group of people walk on a beach with surf boards". While all of the samples look sharp, the images generated by LAPGAN look more noisy and it is harder to make out definite objects, 
+%don't have a clear structure in them
+whereas the images generated by variational models trained with L2 cost function have a watercolor effect on the images.
 
-As for the quantitative comparison of different models, we first compare the performances of the model trained with variational methods. We rank the images in test set conditioned on the captions based on the variational lower bound of likelihood and then report the Precision-Recall metric to evaluate the quality of the generative model. As we expected, the quality of image retrieval using generative models is worse compared to the disriminative models that were specifically build for retrieval. To deal with large computational complexity of looping through each test image, we create a shortlist of hundred images including the correct one, based on the convolutional features of VGG like model trained on CIFAR dataset. Since there are ``easy'' images for which the model assigns high likelihood independent of the query caption, we look at the ratio of likehood of image conditioned on the sentence to likelihood of image conditioned on the mean sentence representation in the training set. We found that the reconstruction error $\rloss$ increased for the sharpened images that considerably hurt the retrieval results. Since sharpening changes the statistics of images, computing reconstruction error for each pixel is not necessarily a good metric.
+As for the quantitative comparison of different models, we first compare the performances of the model trained with variational methods. We rank the images in test set conditioned on the captions based on the variational lower bound of likelihood and then report the Precision-Recall metric to evaluate the quality of the generative model. Unsurprisingly, the quality of image retrieval using generative models is worse than that of disriminative models that were specifically built for retrieval. To deal with the large computational complexity involved in looping through each test image, we create a shortlist of one hundred images including the correct one, based on images having closest distance in the convolutional feature-space of a VGG-like model trained on the CIFAR dataset. Since there are ``easy'' images for which the model assigns high likelihood independent of the query caption, we look at the ratio of likelihood of image conditioned on the sentence to likelihood of image conditioned on the mean sentence representation in the training set. We found that the reconstruction error $\rloss$ increased for sharpened images, and that sharpening considerably hurt the retrieval results. Since sharpening changes the statistics of images, computing reconstruction error for each pixel is not necessarily a good metric.
 
-Instead of calculating error per each pixel, we turn to the smarter metric, such as Structural Similarity Index (SSI), which incorporates luminace and contrast masking into the error calculation. Due to strong inter-dependencies of closer pixels, the metric is calculated on the small windows of the image. To calculate SSI, we sampled fifty images from prior of each generative model per each caption in the test set.
+Instead of calculating error per each pixel, we turn to a smarter metric, the Structural Similarity Index (SSI), which incorporates luminance and contrast masking into the error calculation. Due to strong inter-dependencies of closer pixels, the metric is calculated on small windows of the image. To calculate SSI, we sampled fifty images from the prior of each generative model for each caption in the test set.
 
 \begin{table}[!b]
 \begin{center}
