--- a/ram_workshop/ram-paper.bib
+++ b/ram_workshop/ram-paper.bib
@@ -44,13 +44,16 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@article{skip-thought,
+  author    = {Ryan Kiros et al.},
+  title     = {Skip-Thought vectors},
+  journal   = {NIPS 2015}
+}
+
 @article{kingma_vae,
-  author    = {Diederik P. Kingma and
-               Max Welling},
+  author    = {Diederik Kingma and Max Welling},
   title     = {Auto-Encoding Variational Bayes},
-  journal   = {CoRR},
-  volume    = {abs/1312.6114},
-  year      = {2013},
+  journal   = {ICLR 2014},
   url       = {http://arxiv.org/abs/1312.6114},
   timestamp = {Mon, 06 Jan 2014 15:10:41 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KingmaW13},
@@ -58,35 +61,15 @@
 }
 
 @article{gregor_draw,
-  author    = {Karol Gregor and Ivo Danihelka and Alex Graves and Daan Wierstra},
+  author    = {Karol Gregor et. al.},
   title     = {{DRAW:} {A} Recurrent Neural Network For Image Generation},
-  journal   = {CoRR},
-  volume    = {abs/1502.04623},
-  year      = {2015},
+  journal   = {ICML 2015}
 }
 
 @incollection{ilya_mt,
-  author = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V. V},
+  author = {Ilya Sutskever et al.},
   title = {Sequence to Sequence Learning with Neural Networks},
-  booktitle = {Advances in Neural Information Processing Systems 27},
-  pages = {3104--3112},
-  year = {2014},
-}
-
-@article{nitish_video,
-  author    = {Nitish Srivastava and Elman Mansimov and Ruslan Salakhutdinov},
-  title     = {Unsupervised Learning of Video Representations using {LSTM}s},
-  journal   = {ICML},
-  year      = {2015}
-}
-
-@inproceedings{cho_mt,
-  author    = {Kyunghyun Cho and Bart van Merrienboer and {\c{C}}aglar G{\"{u}}l{\c{c}}ehre and
-               Dzmitry Bahdanau and Fethi Bougares and Holger Schwenk and Yoshua Bengio},
-  title     = {Learning Phrase Representations using {RNN} Encoder-Decoder for Statistical Machine Translation},
-  booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing, {EMNLP} 2014},
-  pages     = {1724--1734},
-  year      = {2014},
+  journal = {NIPS 2014}
 }
 
 @article{hinton_dbn,
@@ -107,25 +90,9 @@
 }
 
 @inproceedings{goodfellow_gan,
-  author    = {Ian J. Goodfellow and
-               Jean Pouget{-}Abadie and
-               Mehdi Mirza and
-               Bing Xu and
-               David Warde{-}Farley and
-               Sherjil Ozair and
-               Aaron C. Courville and
-               Yoshua Bengio},
+  author    = {Ian Goodfellow et al.},
   title     = {Generative Adversarial Nets},
-  booktitle = {Advances in Neural Information Processing Systems 27: Annual Conference
-               on Neural Information Processing Systems 2014, December 8-13 2014,
-               Montreal, Quebec, Canada},
-  pages     = {2672--2680},
-  year      = {2014},
-  crossref  = {DBLP:conf/nips/2014},
-  url       = {http://papers.nips.cc/paper/5423-generative-adversarial-nets},
-  timestamp = {Wed, 10 Dec 2014 21:34:12 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/nips/GoodfellowPMXWOCB14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  journal   = {NIPS 2014}
 }
 
 @inproceedings{gutmann_nce,
@@ -146,19 +113,10 @@
 }
 
 @article{denton_lapgan,
-  author    = {Emily L. Denton and
-               Soumith Chintala and
-               Arthur Szlam and
-               Robert Fergus},
-  title     = {Deep Generative Image Models using a Laplacian Pyramid of Adversarial
-               Networks},
-  journal   = {CoRR},
-  volume    = {abs/1506.05751},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1506.05751},
-  timestamp = {Wed, 01 Jul 2015 15:10:24 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DentonCSF15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  author    = {Emily Denton et al.},
+  title     = {Deep Generative Image Models using a Laplacian Pyramid of Adv.
+               Nets},
+  journal   = {NIPS 2015}
 }
 
 @article{smolensky_rbm,
@@ -172,13 +130,7 @@
   author    = {Philip Bachman and
                Doina Precup},
   title     = {Data Generation as Sequential Decision Making},
-  journal   = {CoRR},
-  volume    = {abs/1506.03504},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1506.03504},
-  timestamp = {Wed, 01 Jul 2015 15:10:24 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/BachmanP15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  journal   = {NIPS 2015}
 }
 
 @article{karpathy_captions,
