--- a/ram_workshop/ram-paper.bib
+++ b/ram_workshop/ram-paper.bib
@@ -45,7 +45,7 @@
 }
 
 @article{skip-thought,
-  author    = {Ryan Kiros et al.},
+  author    = {R. Kiros et al.},
   title     = {Skip-Thought vectors},
   journal   = {NIPS 2015}
 }
@@ -169,18 +169,13 @@
 }
 
 @article{kiros_captions,
-  author    = {Ryan Kiros and
-               Ruslan Salakhutdinov and
-               Richard S. Zemel},
-  title     = {Unifying Visual-Semantic Embeddings with Multimodal Neural Language
+  author    = {R. Kiros and
+               R. Salakhutdinov and
+               R. Zemel},
+  title     = {Unifying Visual-Semantic Embeddings with Neural Language
                Models},
-  journal   = {CoRR},
-  volume    = {abs/1411.2539},
+  journal   = {TACL},
   year      = {2014},
-  url       = {http://arxiv.org/abs/1411.2539},
-  timestamp = {Mon, 01 Dec 2014 14:32:13 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KirosSZ14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{russ_binarizedmnist,
