--- a/ram_workshop/ram-paper.tex
+++ b/ram_workshop/ram-paper.tex
@@ -84,6 +84,9 @@ University of Toronto\\
 \newcommand{\fix}{\marginpar{FIX}}
 \newcommand{\new}{\marginpar{NEW}}
 \graphicspath{{../}}
+
+\renewcommand{\baselinestretch}{0.97}
+
 \begin{document}
 
 \maketitle
@@ -151,12 +154,12 @@ canv_t = \canv_{t-1} + \writeop(\hdec_t)
 %\canv_t &= \canv_{t-1} + \writeop(\hdec_t)
 \end{align}
 where $\writeop$ and $\readop$ are the same attention operators as in \citep{gregor_draw}.
-The $align$ function is used to compute the alignment between the input caption and intermediate image generative steps as in \cite{bahdanau_mt}. Given the caption representation from the language model, $\hlangall = [\hlang_{1}, \hlang_{2}, ..., \hlang_{N}]$, the $align$ operator computes the final sentence representation $s_t$ through a weighted sum using alignment probabilities $\alpha_{1...N}$:
+The $align$ function is used to compute the alignment between the input caption and intermediate image generative steps \citep{bahdanau_mt}. Given the caption representation from the language model, $\hlangall = [\hlang_{1}, \hlang_{2}, ..., \hlang_{N}]$, the $align$ operator computes the final sentence representation $s_t$ through a weighted sum using alignment probabilities $\alpha_{1...N}$:
 %\begin{align}
 %\vspace{-0.1in}
 $s_t=align(\hdec_{t-1}, \hlangall) = \alpha_{1}\hlang_{1} + \alpha_{2}\hlang_{2} + ... + \alpha_{N}\hlang_{N}.$
 %\end{align}
-The corresponding alignment probabilities $\alpha_{1...N}$ at each step are obtained using the caption representation $\hlangall$ and the hidden state of the generative model $\hdec_{t}$, as in \citep{bahdanau_mt}
+The corresponding alignment probabilities $\alpha_{1...N}$ at each step are obtained using the caption representation $\hlangall$ and the hidden state of the generative model $\hdec_{t}$, as in \citep{bahdanau_mt}.
 \comm{
 \begin{align}
 e_{tj} &= v^{T}tanh(U\hlang_{j} + W\hdec_{t} + b)\\
@@ -239,6 +242,7 @@ First, we wanted to see whether the model understood one of the most basic prope
 
 % \vspace{-0.5cm}
 \begin{figure}[!h]
+ \vspace{-0.5cm}
 \captionsetup[subfigure]{labelformat=empty}
 \begin{center}
 \subfloat[A \underline{yellow} school bus parked in a parking lot.
@@ -259,7 +263,7 @@ First, we wanted to see whether the model understood one of the most basic prope
 \vspace{-0.6cm}
 \end{figure}
 
-Apart from changing the colors of objects, we were curious whether changing the background of the scene described in a caption would result in the appropriate changes in the generated samples. The task of changing the background of an image is somewhat harder than just changing the color of an object because the model will have to make alterations over a wider visual area. Nevertheless, as shown in Figure~\ref{fig:genimages2}, changing the skies from blue to rainy in a caption as well as changing the grass type from dry to green in another caption resulted in the appropriate changes in the generated image. The nearest images from the training set also indicate that the model was not simply copying the patterns it observed during the learning phase.
+Apart from changing the colors of objects, we experimented with changing the background of the scene described in a caption to see whether this would result in the appropriate changes in the generated samples. The task of changing the background of an image is somewhat harder than just changing the color of an object because the model will have to make alterations over a wider visual area. Nevertheless, as shown in Figure~\ref{fig:genimages2}, changing the skies from blue to rainy in a caption as well as changing the grass type from dry to green in another caption resulted in the appropriate changes in the generated image. The nearest images from the training set also indicate that the model was not simply copying the patterns it observed during the learning phase.
 
 \vspace{-0.5cm}
 \begin{figure}[!h]
@@ -287,7 +291,7 @@ Apart from changing the colors of objects, we were curious whether changing the 
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-sharp.png}}\quad
 %
 \end{center}
-\caption{Bottom: Examples of changing the background while keeping the caption fixed. Top: The respective nearest training images based on pixel-wise L2 distance.}
+\caption{{\bf Bottom}: Examples of changing the background while keeping the caption fixed. {\bf Top}: The respective nearest training images based on pixel-wise L2 distance.}
 \label{fig:genimages2}
 \vspace{-0.4cm}
 \end{figure}
@@ -347,6 +351,7 @@ During the generation step, the model mostly focused on the specific words that 
 
 \vspace{-0.5cm}
 \begin{figure}[!h]
+\vspace{-0.5cm}
 \captionsetup[subfigure]{labelformat=empty}
 \begin{center}
 \subfloat[\hlcthree{A} rider \hlcone{on} a blue \hlcone{motorcycle} in the \underline{\hlctwo{desert}}.
@@ -391,7 +396,9 @@ To compare performances of different generative models, we report results on two
 
 In Figure~\ref{fig:diffmodels}, we generated several samples from the prior of each of the current state-of-the-art generative models, conditioned on the caption ``A group of people walk on a beach with surf boards".
 
-To compare performances of variational models, we rank the images conditioned on the captions in the test set based on the lower bound of the likelihood and then report the Precision-Recall metric (see Table~\ref{tab:results}). To avoid looping through each test image, we create a shortlist of 100 images including the correct one, based on the closest distance in the convolutional feature-space of a VGG-like model trained on the CIFAR dataset. To deal with ``easy'' images, we took a ratio of image likelihood conditioned on the caption to image likelihood conditioned on the mean training caption representation. We found that the reconstruction error $\rloss$ increased for sharpened images, which considerably hurt the retrieval.
+To compare performances of variational models, we rank the images conditioned on the captions in the test set based on the lower bound of the log-probability and then report the Precision-Recall metric (see Table~\ref{tab:results}). To avoid looping through each test image, we create a shortlist of 100 images including the correct one, based on the closest distance in the convolutional feature-space of a VGG-like model trained on the CIFAR dataset. To deal with ``easy'' images, we took a ratio of image 
+likelihood conditioned on the caption to image likelihood conditioned on the mean training caption representation~\cite{kiros_captions}. 
+We found that the lower bound of the test log-probability decreased for sharpened images, which considerably hurt the retrieval.
 
 In addition we calculate Structural Similarity Index (SSI), which incorporates luminance and contrast masking into the error calculation. The metric is also calculated on small windows of the image. We sampled 50 images from the prior of each generative model for every test caption and calculated SSI, which is reported in Table~\ref{tab:results}.
 
