--- a/ram_workshop/ram-paper.tex
+++ b/ram_workshop/ram-paper.tex
@@ -90,7 +90,7 @@ University of Toronto\\
 \vspace*{-0.4cm}
 \begin{abstract}
 \vspace*{-0.15cm}
-Images rarely appear in isolation as they are often accompanied by textual description that could be used to simplify image generation. In this work, we introduce a model that iteratively draws patches on a canvas, while attending to the relevant words in the description. After training on COCO, we then illustrate how our model generalizes to captions describing novel scenarios that are not seen in the dataset.
+Motivated by the recent progress in generative models, we introduce a model that generates images from natural language descriptions. The proposed model iteratively draws patches on a canvas, while attending to the relevant words in the description. We empirically demonstrate our model generates images with novel scene composition corresponding to previously unseen captions. We then show our model outperforms other baseline generative models on image generation tasks.  We further evaluated image retrieval performance of our proposed generative model on MSCOCO dataset.  
 \end{abstract} 
 
 \vspace{-0.1in}
