--- a/ram_workshop/ram-paper.tex
+++ b/ram_workshop/ram-paper.tex
@@ -178,7 +178,7 @@ Setting $\alpha_{1...N}$ to $\frac{1}{N}$ turns the encoder into the vanilla mod
 \vspace{-0.3in}
 \captionsetup[subfigure]{labelformat=empty}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{figures/alignDrawNew.pdf}\quad
+\includegraphics[width=0.8\textwidth]{figures/alignDrawAnnotated.pdf}\quad
 %
 \end{center}
 \vspace{-0.2in}
