--- a/ram_workshop/ram-paper.bib
+++ b/ram_workshop/ram-paper.bib
@@ -66,7 +66,7 @@
   journal   = {ICML 2015}
 }
 
-@incollection{ilya_mt,
+@article{ilya_mt,
   author = {Ilya Sutskever et al.},
   title = {Sequence to Sequence Learning with Neural Networks},
   journal = {NIPS 2014}
